Feature/admin (#8)
* feat: merge authentication module

* feat(auth): implement complete authentication module

Backend:
- User entity (UserDetails), Role enum, PasswordResetToken entity
- UserRepository, PasswordResetTokenRepository
- DTOs: Register/Login/Auth/ForgotPassword/ResetPassword/RefreshToken/ChangePassword
- CustomUserDetailsService (replaces AppConfig stub)
- AuthService + AuthServiceImpl (register, login, refresh, forgot/reset password, logout)
- EmailService interface + ConsoleEmailService (logs reset link)
- AuthController: POST /auth/register|login|refresh|forgot-password|reset-password|logout|change-password; GET /auth/me
- AuthEntryPointHandler (JSON 401), AccessDeniedHandlerImpl (JSON 403)
- DataInitializer (seeds default admin)
- Updated AppConfig, SecurityConfig, GlobalExceptionHandler, application.properties

Frontend:
- Full CSS design system (dark theme, glassmorphism, CSS variables)
- authService.js, upgraded api.js (silent 401 refresh + queue), AuthContext (real API + role helpers)
- LoginPage (production), RegisterPage (role cards), ForgotPasswordPage, ResetPasswordPage
- ProtectedRoute, UnauthorizedPage
- StudentDashboard, AdminDashboard, PlacementOfficerDashboard
- App.jsx with complete protected routing

* fix(build): resolve Java 25 compatibility and fix mvnw.cmd invocation

* Complete authentication module

---------

Co-authored-by: feature/auth <team@placement.dev>

* Implement Company and Placement Drive Module (#4)

* feat(company-drive): implement company and placement drive module

Backend:
- Add Company, PlacementDrive JPA entities with DriveStatus enum
- Add CompanyRepository, PlacementDriveRepository with search/filter queries
- Add CompanyRequest/Response, PlacementDriveRequest/Response DTOs
- Add CompanyMapper, PlacementDriveMapper (MapStruct)
- Add CompanyService, PlacementDriveService interfaces and impls
- Add CompanyController (CRUD + search/paginate)
- Add PlacementDriveController (CRUD + close PATCH + company filter)
