@@ -2,26 +2,25 @@ package com.placement.management.service.impl;
 
 import com.placement.management.dto.admin.*;
 import com.placement.management.entity.*;
-import com.placement.management.entity.enums.*;
 import com.placement.management.exception.ResourceNotFoundException;
 import com.placement.management.repository.*;
 import com.placement.management.service.AdminService;
 import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
-import org.springframework.security.crypto.password.PasswordEncoder;
-
 @Service
 @Transactional
 public class AdminServiceImpl implements AdminService {
 
     private final UserRepository userRepository;
-    private final StudentRepository studentRepository;
+    private final StudentProfileRepository studentProfileRepository;
     private final CompanyRepository companyRepository;
     private final PlacementDriveRepository driveRepository;
     private final ApplicationRepository applicationRepository;
@@ -29,13 +28,13 @@ public class AdminServiceImpl implements AdminService {
 
     public AdminServiceImpl(
             UserRepository userRepository,
-            StudentRepository studentRepository,
+            StudentProfileRepository studentProfileRepository,
             CompanyRepository companyRepository,
             PlacementDriveRepository driveRepository,
             ApplicationRepository applicationRepository,
             PasswordEncoder passwordEncoder) {
         this.userRepository = userRepository;
-        this.studentRepository = studentRepository;
+        this.studentProfileRepository = studentProfileRepository;
         this.companyRepository = companyRepository;
         this.driveRepository = driveRepository;
         this.applicationRepository = applicationRepository;
@@ -45,7 +44,7 @@ public class AdminServiceImpl implements AdminService {
     @Override
     @Transactional(readOnly = true)
     public AdminDashboardStatsDTO getDashboardStats() {
-        long totalStudents = studentRepository.count();
+        long totalStudents = studentProfileRepository.count();
         long totalCompanies = companyRepository.count();
         long totalDrives = driveRepository.count();
         long totalApplications = applicationRepository.count();
@@ -53,9 +52,8 @@ public class AdminServiceImpl implements AdminService {
         long totalRejected = applicationRepository.countByStatus(ApplicationStatus.REJECTED);
         long totalPending = applicationRepository.countByStatus(ApplicationStatus.APPLIED);
 
-        long eligibleStudents = studentRepository.countByIsEligibleTrue();
-        double placementPercentage = eligibleStudents > 0
-                ? ((double) totalSelected / eligibleStudents) * 100.0
+        double placementPercentage = totalStudents > 0
+                ? ((double) totalSelected / totalStudents) * 100.0
                 : 0.0;
 
         List<DriveAdminDTO> recentDrives = driveRepository.findTop5ByOrderByCreatedAtDesc()
@@ -67,8 +65,8 @@ public class AdminServiceImpl implements AdminService {
         List<ApplicationAdminDTO> recentSelections = applicationRepository.findTop5ByStatusOrderByAppliedAtDesc(ApplicationStatus.SELECTED)
                 .stream().map(this::mapToApplicationDTO).collect(Collectors.toList());
 
-        List<DriveAdminDTO> upcomingDrives = driveRepository.findTop5ByStatusOrderByDriveDateAsc(DriveStatus.UPCOMING)
-                .stream().map(this::mapToDriveDTO).collect(Collectors.toList());
+        List<DriveAdminDTO> upcomingDrives = driveRepository.findByStatus(DriveStatus.UPCOMING)
+                .stream().limit(5).map(this::mapToDriveDTO).collect(Collectors.toList());
 
         return AdminDashboardStatsDTO.builder()
                 .totalStudents(totalStudents)
@@ -89,18 +87,24 @@ public class AdminServiceImpl implements AdminService {
     @Override
     @Transactional(readOnly = true)
     public Page<StudentAdminDTO> getAllStudents(String query, String branch, Pageable pageable) {
-        return studentRepository.searchStudents(
-                (query != null && !query.trim().isEmpty()) ? query.trim() : null,
-                (branch != null && !branch.trim().isEmpty()) ? branch.trim() : null,
-                pageable
-        ).map(this::mapToStudentDTO);
+        List<StudentProfile> profiles = studentProfileRepository.findAll();
+        List<StudentAdminDTO> dtos = profiles.stream()
+                .filter(p -> (query == null || query.isBlank() || (p.getUser() != null && p.getUser().getName().toLowerCase().contains(query.toLowerCase())) || (p.getRegisterNumber() != null && p.getRegisterNumber().toLowerCase().contains(query.toLowerCase()))))
+                .filter(p -> (branch == null || branch.isBlank() || (p.getDepartment() != null && p.getDepartment().equalsIgnoreCase(branch))))
+                .map(this::mapToStudentDTO)
+                .collect(Collectors.toList());
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), dtos.size());
+        List<StudentAdminDTO> subList = start <= dtos.size() ? dtos.subList(start, end) : List.of();
+        return new PageImpl<>(subList, pageable, dtos.size());
     }
 
     @Override
     @Transactional(readOnly = true)
     public StudentAdminDTO getStudentById(Long studentId) {
-        Student student = studentRepository.findById(studentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Student", "id", studentId));
+        StudentProfile student = studentProfileRepository.findById(studentId)
+                .orElseThrow(() -> new ResourceNotFoundException("StudentProfile", "id", studentId));
         return mapToStudentDTO(student);
     }
 
@@ -110,74 +114,69 @@ public class AdminServiceImpl implements AdminService {
             throw new IllegalArgumentException("Email already registered: " + dto.getEmail());
         }
 
-        User user = User.builder()
-                .email(dto.getEmail())
-                .password(passwordEncoder.encode(dto.getPassword() != null && !dto.getPassword().trim().isEmpty() ? dto.getPassword() : "student123"))
-                .role(Role.STUDENT)
-                .status(AccountStatus.APPROVED)
-                .build();
+        User user = new User();
+        user.setName(dto.getName());
+        user.setEmail(dto.getEmail());
+        user.setPassword(passwordEncoder.encode(dto.getPassword() != null && !dto.getPassword().trim().isEmpty() ? dto.getPassword() : "student123"));
+        user.setRole(Role.STUDENT);
+        user.setEnabled(true);
         User savedUser = userRepository.save(user);
 
-        Student student = Student.builder()
-                .user(savedUser)
-                .name(dto.getName())
-                .rollNumber(dto.getRollNumber())
-                .branch(dto.getBranch())
-                .cgpa(dto.getCgpa() != null ? dto.getCgpa() : 0.0)
-                .graduationYear(dto.getGraduationYear() != null ? dto.getGraduationYear() : 2026)
-                .phoneNumber(dto.getPhoneNumber())
-                .isEligible(true)
-                .build();
+        StudentProfile profile = new StudentProfile();
+        profile.setUser(savedUser);
+        profile.setRegisterNumber(dto.getRollNumber());
+        profile.setDepartment(dto.getBranch());
+        profile.setCgpa(dto.getCgpa() != null ? dto.getCgpa() : 0.0);
+        profile.setGraduationYear(dto.getGraduationYear() != null ? dto.getGraduationYear() : 2026);
 
-        Student savedStudent = studentRepository.save(student);
+        StudentProfile savedStudent = studentProfileRepository.save(profile);
         return mapToStudentDTO(savedStudent);
     }
 
     @Override
     public StudentAdminDTO updateStudent(Long studentId, CreateStudentDTO dto) {
-        Student student = studentRepository.findById(studentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Student", "id", studentId));
+        StudentProfile student = studentProfileRepository.findById(studentId)
+                .orElseThrow(() -> new ResourceNotFoundException("StudentProfile", "id", studentId));
 
-        if (dto.getName() != null) student.setName(dto.getName());
-        if (dto.getRollNumber() != null) student.setRollNumber(dto.getRollNumber());
-        if (dto.getBranch() != null) student.setBranch(dto.getBranch());
+        if (dto.getRollNumber() != null) student.setRegisterNumber(dto.getRollNumber());
+        if (dto.getBranch() != null) student.setDepartment(dto.getBranch());
         if (dto.getCgpa() != null) student.setCgpa(dto.getCgpa());
         if (dto.getGraduationYear() != null) student.setGraduationYear(dto.getGraduationYear());
-        if (dto.getPhoneNumber() != null) student.setPhoneNumber(dto.getPhoneNumber());
 
-        if (dto.getEmail() != null && !dto.getEmail().equalsIgnoreCase(student.getUser().getEmail())) {
+        if (dto.getEmail() != null && student.getUser() != null && !dto.getEmail().equalsIgnoreCase(student.getUser().getEmail())) {
             if (userRepository.existsByEmail(dto.getEmail())) {
                 throw new IllegalArgumentException("Email already registered: " + dto.getEmail());
             }
             student.getUser().setEmail(dto.getEmail().trim());
         }
+        if (dto.getName() != null && student.getUser() != null) {
+            student.getUser().setName(dto.getName());
+        }
 
-        Student updated = studentRepository.save(student);
+        StudentProfile updated = studentProfileRepository.save(student);
         return mapToStudentDTO(updated);
     }
 
     @Override
     public StudentAdminDTO updateStudentStatus(Long studentId, StatusUpdateDTO statusUpdate) {
-        Student student = studentRepository.findById(studentId)
-                .orElseThrow(() -> new ResourceNotFoundException("Student", "id", studentId));
+        StudentProfile student = studentProfileRepository.findById(studentId)
+                .orElseThrow(() -> new ResourceNotFoundException("StudentProfile", "id", studentId));
 
-        if (statusUpdate.getStatus() != null) {
-            AccountStatus newStatus = AccountStatus.valueOf(statusUpdate.getStatus().toUpperCase());
-            student.getUser().setStatus(newStatus);
+        if (statusUpdate.getStatus() != null && student.getUser() != null) {
+            student.getUser().setEnabled("ACTIVE".equalsIgnoreCase(statusUpdate.getStatus()) || "APPROVED".equalsIgnoreCase(statusUpdate.getStatus()));
+            userRepository.save(student.getUser());
         }
 
-        Student updated = studentRepository.save(student);
-        return mapToStudentDTO(updated);
+        return mapToStudentDTO(student);
     }
 
     @Override
     @Transactional(readOnly = true)
-    public Page<CompanyAdminDTO> getAllCompanies(String query, CompanyStatus status, Pageable pageable) {
-        return companyRepository.searchCompanies(
-                (query != null && !query.trim().isEmpty()) ? query.trim() : null,
-                status,
-                pageable
-        ).map(this::mapToCompanyDTO);
+    public Page<CompanyAdminDTO> getAllCompanies(String query, Pageable pageable) {
+        Page<Company> page = (query != null && !query.isBlank())
+                ? companyRepository.findByNameContainingIgnoreCase(query, pageable)
+                : companyRepository.findAll(pageable);
+        return page.map(this::mapToCompanyDTO);
     }
 
     @Override
@@ -189,27 +188,12 @@ public class AdminServiceImpl implements AdminService {
     }
 
     @Override
-    public CompanyAdminDTO updateCompanyApprovalStatus(Long companyId, StatusUpdateDTO statusUpdate) {
-        Company company = companyRepository.findById(companyId)
-                .orElseThrow(() -> new ResourceNotFoundException("Company", "id", companyId));
-
-        if (statusUpdate.getStatus() != null) {
-            CompanyStatus newStatus = CompanyStatus.valueOf(statusUpdate.getStatus().toUpperCase());
-            company.setApprovalStatus(newStatus);
-        }
-
-        Company updated = companyRepository.save(company);
-        return mapToCompanyDTO(updated);
-    }
-
-    @Override
     public CompanyAdminDTO updateCompanyAccountStatus(Long companyId, StatusUpdateDTO statusUpdate) {
         Company company = companyRepository.findById(companyId)
                 .orElseThrow(() -> new ResourceNotFoundException("Company", "id", companyId));
 
         if (statusUpdate.getStatus() != null) {
-            AccountStatus newStatus = AccountStatus.valueOf(statusUpdate.getStatus().toUpperCase());
-            company.getUser().setStatus(newStatus);
+            company.setActive("ACTIVE".equalsIgnoreCase(statusUpdate.getStatus()) || "APPROVED".equalsIgnoreCase(statusUpdate.getStatus()));
         }
 
         Company updated = companyRepository.save(company);
@@ -219,11 +203,8 @@ public class AdminServiceImpl implements AdminService {
     @Override
     @Transactional(readOnly = true)
     public Page<DriveAdminDTO> getAllDrives(String query, DriveStatus status, Pageable pageable) {
-        return driveRepository.searchDrives(
-                (query != null && !query.trim().isEmpty()) ? query.trim() : null,
-                status,
-                pageable
-        ).map(this::mapToDriveDTO);
+        Page<PlacementDrive> page = driveRepository.findAllByStatusOptional(status, pageable);
+        return page.map(this::mapToDriveDTO);
     }
 
     @Override
@@ -237,11 +218,8 @@ public class AdminServiceImpl implements AdminService {
     @Override
     @Transactional(readOnly = true)
     public Page<ApplicationAdminDTO> getAllApplications(String query, ApplicationStatus status, Pageable pageable) {
-        return applicationRepository.searchApplications(
-                (query != null && !query.trim().isEmpty()) ? query.trim() : null,
-                status,
-                pageable
-        ).map(this::mapToApplicationDTO);
+        Page<Application> page = applicationRepository.findAll(pageable);
+        return page.map(this::mapToApplicationDTO);
     }
 
     @Override
@@ -254,73 +232,67 @@ public class AdminServiceImpl implements AdminService {
 
     // ── Helper Mappers ──────────────────────────────────────────────────
 
-    private StudentAdminDTO mapToStudentDTO(Student s) {
+    private StudentAdminDTO mapToStudentDTO(StudentProfile s) {
         String placementStatus = "UNPLACED";
         boolean hasSelected = applicationRepository.findAll().stream()
-                .anyMatch(a -> a.getStudent().getId().equals(s.getId()) && a.getStatus() == ApplicationStatus.SELECTED);
+                .anyMatch(a -> a.getStudentProfile() != null && a.getStudentProfile().getId().equals(s.getId()) && a.getStatus() == ApplicationStatus.SELECTED);
         if (hasSelected) {
             placementStatus = "PLACED";
         } else {
             boolean hasApplied = applicationRepository.findAll().stream()
-                    .anyMatch(a -> a.getStudent().getId().equals(s.getId()));
+                    .anyMatch(a -> a.getStudentProfile() != null && a.getStudentProfile().getId().equals(s.getId()));
             if (hasApplied) placementStatus = "APPLIED";
         }
 
         return StudentAdminDTO.builder()
                 .id(s.getId())
-                .userId(s.getUser().getId())
-                .rollNumber(s.getRollNumber())
-                .name(s.getName())
-                .email(s.getUser().getEmail())
-                .branch(s.getBranch())
+                .userId(s.getUser() != null ? s.getUser().getId() : null)
+                .rollNumber(s.getRegisterNumber())
+                .name(s.getUser() != null ? s.getUser().getName() : "Student #" + s.getId())
+                .email(s.getUser() != null ? s.getUser().getEmail() : "")
+                .branch(s.getDepartment())
                 .cgpa(s.getCgpa())
                 .graduationYear(s.getGraduationYear())
                 .resumeUrl(s.getResumeUrl())
-                .phoneNumber(s.getPhoneNumber())
-                .isEligible(s.getIsEligible())
-                .accountStatus(s.getUser().getStatus())
+                .phoneNumber(s.getUser() != null ? s.getUser().getPhoneNumber() : "")
+                .isEligible(true)
                 .placementStatus(placementStatus)
                 .build();
     }
 
     private CompanyAdminDTO mapToCompanyDTO(Company c) {
-        long totalDrives = driveRepository.findAll().stream()
-                .filter(d -> d.getCompany().getId().equals(c.getId()))
-                .count();
+        long totalDrives = driveRepository.findByCompanyId(c.getId()).size();
 
         long totalPlacements = applicationRepository.findAll().stream()
-                .filter(a -> a.getDrive().getCompany().getId().equals(c.getId()) && a.getStatus() == ApplicationStatus.SELECTED)
+                .filter(a -> a.getPlacementDrive() != null && a.getPlacementDrive().getCompany() != null && a.getPlacementDrive().getCompany().getId().equals(c.getId()) && a.getStatus() == ApplicationStatus.SELECTED)
                 .count();
 
         return CompanyAdminDTO.builder()
                 .id(c.getId())
-                .userId(c.getUser().getId())
                 .companyName(c.getCompanyName())
                 .industry(c.getIndustry())
                 .website(c.getWebsite())
-                .contactEmail(c.getContactEmail())
-                .contactPhone(c.getContactPhone())
+                .contactEmail(c.getHrContactEmail())
+                .contactPhone(c.getPhone())
                 .location(c.getLocation())
-                .approvalStatus(c.getApprovalStatus())
-                .accountStatus(c.getUser().getStatus())
                 .totalDrives(totalDrives)
                 .totalPlacements(totalPlacements)
                 .build();
     }
 
     private DriveAdminDTO mapToDriveDTO(PlacementDrive d) {
-        long appCount = applicationRepository.countByDriveId(d.getId());
-        long selCount = applicationRepository.countByDriveIdAndStatus(d.getId(), ApplicationStatus.SELECTED);
+        long appCount = applicationRepository.findByPlacementDriveIdOrderByAppliedAtDesc(d.getId()).size();
+        long selCount = applicationRepository.findByPlacementDriveIdAndStatus(d.getId(), ApplicationStatus.SELECTED).size();
 
         return DriveAdminDTO.builder()
                 .id(d.getId())
-                .companyId(d.getCompany().getId())
-                .companyName(d.getCompany().getCompanyName())
-                .jobTitle(d.getJobTitle())
-                .description(d.getDescription())
-                .eligibilityCgpa(d.getEligibilityCgpa())
+                .companyId(d.getCompany() != null ? d.getCompany().getId() : null)
+                .companyName(d.getCompany() != null ? d.getCompany().getCompanyName() : "N/A")
+                .jobTitle(d.getJobRole())
+                .description(d.getJobDescription())
+                .eligibilityCgpa(d.getMinCgpa())
                 .ctc(d.getCtc())
-                .location(d.getLocation())
+                .location(d.getJobLocation())
                 .status(d.getStatus())
                 .driveDate(d.getDriveDate())
                 .deadline(d.getDeadline())
@@ -333,15 +305,15 @@ public class AdminServiceImpl implements AdminService {
     private ApplicationAdminDTO mapToApplicationDTO(Application a) {
         return ApplicationAdminDTO.builder()
                 .id(a.getId())
-                .studentId(a.getStudent().getId())
-                .studentName(a.getStudent().getName())
-                .rollNumber(a.getStudent().getRollNumber())
-                .branch(a.getStudent().getBranch())
-                .cgpa(a.getStudent().getCgpa())
-                .driveId(a.getDrive().getId())
-                .companyName(a.getDrive().getCompany().getCompanyName())
-                .jobTitle(a.getDrive().getJobTitle())
-                .ctc(a.getDrive().getCtc())
+                .studentId(a.getStudentProfile() != null ? a.getStudentProfile().getId() : null)
+                .studentName(a.getStudentProfile() != null && a.getStudentProfile().getUser() != null ? a.getStudentProfile().getUser().getName() : "N/A")
+                .rollNumber(a.getStudentProfile() != null ? a.getStudentProfile().getRegisterNumber() : "N/A")
+                .branch(a.getStudentProfile() != null ? a.getStudentProfile().getDepartment() : "N/A")
+                .cgpa(a.getStudentProfile() != null ? a.getStudentProfile().getCgpa() : 0.0)
+                .driveId(a.getPlacementDrive() != null ? a.getPlacementDrive().getId() : null)
+                .companyName(a.getPlacementDrive() != null && a.getPlacementDrive().getCompany() != null ? a.getPlacementDrive().getCompany().getCompanyName() : "N/A")
+                .jobTitle(a.getPlacementDrive() != null ? a.getPlacementDrive().getJobRole() : "N/A")
+                .ctc(a.getPlacementDrive() != null ? a.getPlacementDrive().getCtc() : 0.0)
                 .status(a.getStatus())
                 .appliedAt(a.getAppliedAt())
                 .build();
